src/objects/Check_List_Item_Template__c.object
<CustomObject>
    <fields>
        <fullName>Check_List_Header_Template__c</fullName>
        <label>Check List Header Template</label>
        <referenceTo>Check_List_Header_Template__c</referenceTo>
        <relationshipLabel>Check List Item Templates</relationshipLabel>
        <relationshipName>Check_List_Item_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Check List Item Templates</relationshipLabel>
        <relationshipName>Check_List_Item_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Check List Item Template</label>
    <nameField>
        <displayFormat>CIT-{000000}</displayFormat>
        <label>Check List Item Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>